2005-03-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/box_db_table_relationship.[h|cc]: Show/edit the 
	relationship titles here too.
	* glom/mode_data/box_data_list_related.cc: on_dialog_layout_hide():
	Update the relationship title in case it has changed.

2005-03-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/Document/document_glom.[h.cc]: Load/save relationship titles.
	* glom/data_structure/Relationship.[h|cc]: Added get/set_title() and 
	get_title_or_name().
	* glom/mode_data/dialog_layout_list_related.[h|cc]: Actually choose 
	fields from the related table.
	

2005-03-06  Murray Cumming  <murrayc@localhost.localdomain>

	* glom/mode_data/box_data_list_related.cc: Constructor: Set a new 
	layout name, so that the portals layouts are not confused with the 
	standard layouts for those tables in the document. Use the new 
	layout dialog.
	* glom/mode_data/: Add dialog_layout_list_related.[h|cc].
	* glom/glom.glade: Define the new dialog.

2005-03-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_db_list.cc: on_adddel_user_requested_delete(): 
	Ask the user whether he really wants to delete the record.
	* glom/utilities/db_adddel.[h|cc]: Add a layout item to the right 
	click menu, so that people can right click to edit list layouts and 
	related records layouts. Still need to give related records layouts 
	an id other than their underlying table.

2005-03-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: on_document_load(): Warn if the user recreates 
	a database using a read-only installed example file.
	* glom/frame_glom.cc: on_menu_userlevel_Developer(): If developer 
	mode is not possible then warn the user and set it back to operator 
	mode.

0.8.12:

2005-02-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/connection_pool.cc: connect(): Do not forget the DATABASE= 
	part of the connection string when connecting to the default templat1 
	database. Otherewise it gets added to the password. Stupid me.