@@ -1,5 +1,12 @@
 2005-03-07  Murray Cumming  <murrayc@murrayc.com>
 
+	* glom/utility_widgets/adddel/adddel.cc, db_adddel/db_adddel.cc: 
+	on_treeview_button_press_event(): Test the bool return from 
+	TreeView::get_path_at_pos to avoid using an invalid path. This 
+	stops the warning when right clicking where there is no row.
+
+2005-03-07  Murray Cumming  <murrayc@murrayc.com>
+
 	* glom/mode_design/box_db_table_relationship.[h|cc]: Show/edit the 
 	relationship titles here too.
 	* glom/mode_data/box_data_list_related.cc: on_dialog_layout_hide():
